--- a/src/cmd/.env
+++ b/src/cmd/.env
@@ -1,3 +1,3 @@
-POSTGRES_ADDR=postgres://postgres:psql123@localhost:5432/postgres?sslmode=disable
-TOKEN=7192337917:AAGWEmiB3jBgqz-aI0PFG0fJMoNvgzMfQkk
-LOG_URL=Yo.log
+POSTGRES_ADDR=ADDR_TO_YOUR_DATABASE
+TOKEN=TOKEN
+LOG_URL= NAME_OF_YOUR_.LOG_FILE
